--- a/src/app/input-form/input-form.component.css
+++ b/src/app/input-form/input-form.component.css
@@ -29,6 +29,14 @@ input {
     color: green;
 }
 
+.visible {
+    visibility: visible;
+}
+
+.hidden {
+    visibility: hidden;
+}
+
 button {
     background-color: #4CAF50;
     color: white;
