--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -20,3 +20,21 @@
   flex-direction: column;
   width: 30%;
 }
+
+@media (max-width: 768px) {
+  .app-container {
+    flex-direction: column;
+  }
+
+  .form-container {
+    flex-direction: column;
+    border-right: none;
+    border-bottom: 3px solid black;
+    width: 100%;
+    padding-bottom: 1em;
+  }
+
+  .card-container {
+    width: 100%;
+  }
+}
